--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -32,4 +32,5 @@ ErrWrongRefreshToken = invalid refresh token
 ErrBindDingtalk=Failure of binding dingtalk
 ErrUnBindDingtalk=Failure of unbinding dingtalk
 ErrGoogleBindCode=Sorry, Not Authenticated
-ErrSendMail=send mail fail
+ErrSendMail=Mail sending is failure
+ErrValidate=Requested parameters validation failed
