add edit user function

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -1,10 +1,13 @@
+[ok]
+Actionsuccess=Successfully done
+UpdateDone=Updated successfully
 [err]
 Err404 =page not found
 ErrInputData=Data Input Error
 ErrDatabase=server error
 ErrDupUser=User information already exists
-ErrNoUser = user information does not exist
-ErrPass = user information does not exist or password is incorrect
+ErrNoUser = User information does not exist
+ErrPass = User information does not exist or password is incorrect
 ErrNoUserPass = User information does not exist or password is incorrect
 ErrNoUserChange = User information does not exist or data remains unchanged
 ErrInvalidUser = incorrect user information
