--- a/config/locale/locale_zh-CN.ini
+++ b/config/locale/locale_zh-CN.ini
@@ -1,3 +1,6 @@
+[ok]
+Actionsuccess=操作成功
+UpdateDone=更新成功
 [err]
 Err404 = 页面没有找到
 ErrInputData=数据输入错误
@@ -13,7 +16,6 @@ ErrWriteFile=写文件出错
 ErrSystem=操作系统错误
 ErrExpired=登录已过期
 ErrPermission=没有权限
-Actionsuccess=操作成功
 ErrGenJwt=获取令牌失败
 ErrChkJwt=无效的令牌
 ErrIdData=此ID无数据记录
