--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -1,6 +1,7 @@
 [ok]
 Actionsuccess=Successfully done
 UpdateDone=Updated successfully
+DeletedDone=Deleted successfully
 [err]
 Err404 =page not found
 ErrInputData=Data Input Error
