add role create function

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -38,3 +38,4 @@ ErrUnBindDingtalk=Failure of unbinding dingtalk
 ErrGoogleBindCode=Sorry, Not Authenticated
 ErrSendMail=Mail sending is failure
 ErrValidate=Requested parameters validation failed
+ErrRoleExists=Role has been created
