--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -39,3 +39,5 @@ ErrGoogleBindCode=Sorry, Not Authenticated
 ErrSendMail=Mail sending is failure
 ErrValidate=Requested parameters validation failed
 ErrRoleExists=Role has been created
+ErrDuplicated=Duplicated record
+ErrNoRecord=No record
