fixed menu's crud

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -41,3 +41,4 @@ ErrValidate=Requested parameters validation failed
 ErrRoleExists=Role has been created
 ErrDuplicated=Duplicated record
 ErrNoRecord=No record
+ErrHasSubRecord=Sub node(s) exists
