--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -8,6 +8,7 @@ ErrInputData=Data Input Error
 ErrDatabase=server error
 ErrDupUser=User information already exists
 ErrNoUser = User information does not exist
+ErrDifferentPasswords=Inconsistent passwords entered
 ErrPass = User information does not exist or password is incorrect
 ErrNoUserPass = User information does not exist or password is incorrect
 ErrNoUserChange = User information does not exist or data remains unchanged
