--- a/config/locale/locale_zh-CN.ini
+++ b/config/locale/locale_zh-CN.ini
@@ -9,6 +9,7 @@ ErrDatabase=服务器错误
 ErrDupUser=用户信息已存在
 ErrNoUser=用户信息不存在
 ErrPass=用户信息不存在或密码不正确
+ErrDifferentPasswords=输入的密码不一致
 ErrNoUserPass=用户信息不存在或密码不正确
 ErrNoUserChange=用户信息不存在或数据未改变
 ErrInvalidUser=用户信息不正确
