add install service

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -3,7 +3,9 @@ Actionsuccess=Successfully done
 UpdateDone=Updated successfully
 DeletedDone=Deleted successfully
 [err]
+
 Err404 =page not found
+ErrInstall =Install error
 ErrInputData=Data Input Error
 ErrDatabase=server error
 ErrDupUser=User information already exists
