--- a/config/locale/locale_zh-CN.ini
+++ b/config/locale/locale_zh-CN.ini
@@ -3,7 +3,8 @@ Actionsuccess=操作成功
 UpdateDone=更新成功
 DeletedDone=删除成功
 [err]
-Err404 = 页面没有找到
+Err404 =页面没有找到
+ErrInstall =安装失败
 ErrInputData=数据输入错误
 ErrDatabase=服务器错误
 ErrDupUser=用户信息已存在
