--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -3,8 +3,8 @@ Actionsuccess=Successfully done
 UpdateDone=Updated successfully
 DeletedDone=Deleted successfully
 [err]
-
-Err404 =page not found
+Err404 =Page not found
+Err403 =No permission
 ErrInstall =Install error
 ErrInputData=Data Input Error
 ErrDatabase=server error
