add user avatar api

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -45,3 +45,4 @@ ErrRoleExists=Role has been created
 ErrDuplicated=Duplicated record
 ErrNoRecord=No record
 ErrHasSubRecord=Sub node(s) exists
+ErrUploadAvatar=upload avatar error
