fixed logs migration

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -47,3 +47,4 @@ ErrDuplicated=Duplicated record
 ErrNoRecord=No record
 ErrHasSubRecord=Sub node(s) exists
 ErrUploadAvatar=upload avatar error
+ErrLogin=Account not found
