add account security hanler

--- a/config/locale/locale_en-US.ini
+++ b/config/locale/locale_en-US.ini
@@ -48,3 +48,4 @@ ErrNoRecord=No record
 ErrHasSubRecord=Sub node(s) exists
 ErrUploadAvatar=upload avatar error
 ErrLogin=Account not found
+ErrSendCode=Verify code not sent
